objects/ssot__InvestmentAccount__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AnnualYieldPercentage__c</fullName>
        <label>Annual Yield Percentage</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FinancialAccountID__c</fullName>
        <label>Financial Account</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Investment Account Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InvestmentObjective__c</fullName>
        <label>Investment Objective</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InvestmentTimeHorizon__c</fullName>
        <label>Investment Time Horizon</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ModelPortfolioType__c</fullName>
        <label>Model Portfolio Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MonthToDatePerformancePercent__c</fullName>
        <label>Month To Date Performance Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OneYearPerformancePercent__c</fullName>
        <label>One Year Performance Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ssot__QuarterToDatePerformancePercent__c</fullName>
        <label>Quarter To Date Performance Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ssot__RebalanceFrequency__c</fullName>
        <label>Rebalance Frequency</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ThreeYearPerformancePercent__c</fullName>
        <label>Three Year Performance Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ssot__YearToDatePerformancePercent__c</fullName>
        <label>Year To Date Performance Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761237093_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>InvestmentAccount_FinancialAccountID_rel</label>
        <referenceTo>ssot__FinancialAccount__dlm</referenceTo>
        <relationshipLabel>InvestmentAccount_FinancialAccountID_rel</relationshipLabel>
        <relationshipName>rel_1697761237093_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>